# mudassir-assignmets-Q3

./: README.md
mudassir-assignment/library-management/: pyproject.toml
mudassir-assignment/library-management/src/library_management/: __init__.py
mudassir-assignment/smartStore-moodAnalyzer/: README.md  pyproject.toml
mudassir-assignment/smartStore-moodAnalyzer/src/smartstore_moodanalyzer/: __init__.py  country_info.py  mood_checker.py  product_suggester.py
